--- a/frontend/app/templates/teams/index.hbs
+++ b/frontend/app/templates/teams/index.hbs
@@ -4,6 +4,8 @@
       <TeamShow @team={{team}} />
     {{/each}}
   {{else}}
-    <h5>{{t "teams.index.no_content"}}</h5>
+    <div class="mt-4">
+      <h5>{{t "teams.index.no_content"}}</h5>
+    </div>
   {{/if}}
 </div>
